# my_python_ws

./: .gitignore
VideoProcessToolkit/: .gitignore  README.md  video_combine.py  video_compose.py  video_convert.py  video_cut.py  video_downsample.py  video_resize.py  video_reverse.py  video_tool.py  video_ui.py  videotool.ui
calib/: calib_intrinsic.py  image_capture.py  resize.py  sgbm_cv_cam.py  stereo_calib.py
common/: video_capture.py
image_match/: feature_matching.py  image_match.py
logo_classifer/: .gitignore  README.md  build_data.py  dump_to_simple_cpp.py  logo_classifier.py  retrain.sh
logo_classifer/cpp_example/: CMakeLists.txt
logo_classifer/cpp_example/src/: demo_logo_classifier.cpp  keras_infer.h  keras_model.cc  keras_model.h
pacman/: compitition_env.py  dijkstra.py  dijkstra_offline.py  map_builder.py  map_env.py  map_play.py  pacman_DQN.py  pacman_a3c.py  pacman_dqn_keras_cnn.py  pacman_dqn_keras_xyvector.py  pathplan.py  readme.txt  train_show.py
process_sf_data/: data_associate.py  grab_data_from_euroc_rosbag.py  test_tf.py  vicon.py  video_cut.py  watch_ts.py  watch_vicon.py  watch_vo_trajectory.py  write_rosbag.py
test_detectron/: live_demo.py
